
     o  The warning messages to do with the default behaviors of 'simulate' and 'trajectory' with respect to the arguments 'times' and 't0' have been removed.
        These warnings were introduced in version 0.34-1 to alert users to changes in the default behavior of 'simulate' and 'trajectory' introduced with that version.
        See the help ("pomp?simulate", "pomp?trajectory") for details.

0.36-7
     o  'trajectory' now gives a more informative error when no skeleton is present

     o  'pred.mean', 'pred.var', and 'filter.mean' methods are now defined for 'pfilterd.pomp' objects (and not just 'mif' objects)

     o  A new 'data()'-loadable example is included: do '?blowflies' to read about it.

0.36-6
     o  The B-spline basis construction functions 'bspline.basis' and 'periodic.bspline.basis' now take a 'names' argument that allows one to give names to the basis functions.

0.36-5
     o  The "intro_to_pomp" vignette has been updated.  The first part of the vignette centers on a new, more transparent first example.

     o  A bug in 'pfilter' has been fixed.  This bug was introduced in version 0.32-6 (SVN revision 315).  Upon filtering failure, state variables were left un-updated.  Thanks to Karim Khader for reporting circumstances that led to the identification of this bug.

     o  There is now a method for 'loglik' on 'probed.pomp' objects.  This returns the synthetic likelihood.

     o  The box-constrained simulated annealing optimization method 'sannbox' is now an option in 'probe.match'.

     o  Calling 'states' on a pomp object having no unobserved states now fails gracefully (returning NULL rather than generating an error).

     o  The rprocess plugin 'discrete.time.sim' now takes an optional 'delta.t' argument to allow for arbitrary (but still necessarily regular) spacing of observations.  By default, delta.t=1.


0.36-1